src/Moonglade.Web/wwwroot/css/src/base.css
:root {
    --transparent-light-15: rgba(255, 255, 255, 0.15);
    --transparent-light-20: rgba(255, 255, 255, 0.2);
    --transparent-light-30: rgba(255, 255, 255, 0.3);
    --transparent-light-50: rgba(255, 255, 255, 0.5);
    --transparent-light-60: rgba(255, 255, 255, 0.6);
    --transparent-light-70: rgba(255, 255, 255, 0.7);
    --transparent-dark-1: rgba(0, 0, 0, 0.108);
    --transparent-dark-2: rgba(0, 0, 0, 0.125);
    --transparent-dark-3: rgba(0, 0, 0, 0.132);
    --transparent-dark-4: rgba(0, 0, 0, 0.175);
    --gray-1: #F2F2F2;
    --gray-2: #EEE;
    --gray-3: #CCC;
    --gray-4: #777;
    --gray-5: #666;
    --gray-6: #555;
    --gray-7: #333;
    --moca-dark: #171717;
    --gray-9: #111;
    --moca-dark-1: #1D2124;
    --moca-dark-2: #343A40;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background: var(--gray-3);
}

::selection {
    background-color: var(--bs-primary);
    color: var(--bs-white);
    text-shadow: none;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei";
    font-size: 0.9rem;
    background-color: var(--bs-white);
}

hr {
    background-color: var(--bs-secondary);
}

a {
    color: var(--accent-color1);
    text-decoration: none;
}

    a:hover,
    a:focus {
        color: var(--accent-color1);
        text-decoration: none;
    }

    a.link-transparent {
        color: var(--transparent-light-70);
    }

        a.link-transparent:hover {
            color: var(--bs-white);
        }

footer {
    color: var(--transparent-light-50);
}

    footer .container h4 {
        color: var(--transparent-light-60);
        font-size: 20px;
        font-weight: lighter;
        margin-bottom: 31px;
        text-transform: uppercase;
    }

    footer a {
        color: var(--transparent-light-70);
    }

        footer a:hover {
            color: var(--bs-white);
        }

.nav-item-icon {
    width: 16px;
    display: inline-block;
    text-align: center;
}

.bg-lightgray-1 {
    background-color: var(--gray-1);
}

.color-transparent-white-50 {
    color: var(--transparent-light-50);
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5 {
    font-weight: normal;
}

    h3 small {
        font-size: 60%;
    }

.box {
    background-color: var(--bs-white);
    border: 1px solid var(--gray-2);
    padding: 1.8rem;
    box-shadow: 0 1.6px 3.6px 0 var(--transparent-dark-3),0 .3px .9px 0 var(--transparent-dark-1);
    border-radius: 3px;
}

.font-sairas {
    font-family: SairaSemiCondensed-Bold, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei" !important;
}

.sec.sec-alter {
    background-color: var(--gray-1);
}

.sec {
    padding-bottom: 50px;
    padding-top: 50px;
}

.h-30px {
    height: 30px !important;
}

.h-100px {
    height: 100px !important;
}

.h-200px {
    height: 200px !important;
}

.h-300px {
    height: 300px !important;
}

.page-content .card-header {
    padding: 0.5rem !important;
}

.btn-round {
    border-radius: 50px !important;
}

.label-success {
    background-color: var(--bs-green);
}

.list-group-item.active, .page-item.active .page-link {
    background-color: var(--accent-color1);
    border-color: var(--accent-color1);
}

.table .table-item-title {
    text-align: left;
}

.hottag-li a > span {
    display: block;
    font-size: 30px;
    font-weight: 100;
}

.hottag-li a {
    height: 80px !important;
    width: 156px;
}

.arch-media-logo svg {
    width: 60px;
}

.user-avatar-char {
    background-color: var(--bs-purple);
    border-radius: 55px;
    color: var(--bs-white);
    font-size: 30px;
    font-weight: 100;
    height: 55px;
    padding-top: 5px;
    text-align: center;
    width: 55px;
}

.ul-archive-item li {
    line-height: 24px;
}

.animate {
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.article-post-summary {
    position: relative;
}

.post-date-box {
    position: absolute;
    width: 70px;
}

.post-date-day {
    color: var(--accent-color1);
    border: 1px solid var(--accent-color1);
    border-radius: 3px 3px 0 0;
    font-size: 42px;
    height: 60px;
    margin: 0;
    padding-right: 7px;
    text-align: right;
}

.post-date-month {
    background-color: var(--accent-color1);
    padding: 1px 10px;
    text-align: right;
    border-radius: 0 0 3px 3px;
}

.post-summary-title {
    font-size: 1.14rem;
    font-weight: 500;
}

.post-summary-box {
    margin-left: 105px;
}

.post-summary-text {
    line-height: 24px;
    word-break: break-all;
    word-wrap: break-word;
}

.blog-info-desktop-lg {
    border-radius: 3px;
    overflow: hidden;
    position: relative;
}

.card-bkimg-container {
    height: 310px;
    overflow: hidden;
}

.card-bkimg {
    -moz-filter: blur(30px);
    -webkit-filter: blur(30px);
    filter: blur(30px);
    margin-left: -69px;
    margin-top: -57px;
    min-width: 150%;
}

.blogger-head-pic {
    border: 5px solid var(--transparent-light-50);
    height: 110px;
    width: 110px;
}

.blog-info-photo-text {
    padding-top: 40px;
    position: absolute;
    top: 32px;
    width: 100%;
    z-index: 999;
}

.bg-accent1 {
    background-color: var(--accent-color1);
}

.bg-accent2 {
    background-color: var(--accent-color2);
}

.bg-moca-dark {
    background-color: var(--moca-dark);
}

    .bg-moca-dark .list-group-item-action:focus,
    .bg-moca-dark .list-group-item-action:hover {
        background-color: var(--moca-dark-1) !important;
    }

.page-link {
    color: var(--accent-color1);
}

.comment-form-containter .badge {
    font-size: 100% !important;
}

.dropdown-menu {
    box-shadow: 0 6px 12px var(--transparent-dark-4);
}

.qrcode-link a {
    color: var(--transparent-light-50);
    cursor: pointer;
    display: inline-block;
    font-size: 25px;
    margin-right: 10px;
}

    .qrcode-link a:hover {
        color: var(--bs-white);
    }

.moonglade-logo {
    font-size: 28px;
    line-height: 1px;
}

.input-captcha {
    max-width: 160px;
}


.btn-accent {
    color: #fff;
    background-color: var(--accent-color1);
    border-color: var(--accent-color1);
}

    .btn-accent:hover {
        color: #fff;
        background-color: var(--accent-color3);
        border-color: var(--accent-color3);
    }

    .btn-accent:focus, .btn-accent.focus {
        color: #fff;
        background-color: var(--accent-color3);
        border-color: var(--accent-color3);
        box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
    }

    .btn-accent.disabled, .btn-accent:disabled {
        color: #fff;
        background-color: var(--accent-color1);
        border-color: var(--accent-color1);
    }

    .btn-accent:not(:disabled):not(.disabled):active, .btn-accent:not(:disabled):not(.disabled).active,
    .show > .btn-accent.dropdown-toggle {
        color: #fff;
        background-color: var(--accent-color3);
        border-color: var(--accent-color3);
    }

        .btn-accent:not(:disabled):not(.disabled):active:focus, .btn-accent:not(:disabled):not(.disabled).active:focus,
        .show > .btn-accent.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
        }

.btn-outline-accent {
    color: var(--accent-color1);
    border-color: var(--accent-color1);
}

    .btn-outline-accent:hover {
        color: #fff;
        background-color: var(--accent-color1);
        border-color: var(--accent-color1);
    }

    .btn-outline-accent:focus, .btn-outline-accent.focus {
        box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
    }

    .btn-outline-accent.disabled, .btn-outline-accent:disabled {
        color: var(--accent-color1);
        background-color: transparent;
    }

    .btn-outline-accent:not(:disabled):not(.disabled):active, .btn-outline-accent:not(:disabled):not(.disabled).active,
    .show > .btn-outline-accent.dropdown-toggle {
        color: #fff;
        background-color: var(--accent-color1);
        border-color: var(--accent-color1);
    }

        .btn-outline-accent:not(:disabled):not(.disabled):active:focus, .btn-outline-accent:not(:disabled):not(.disabled).active:focus,
        .show > .btn-outline-accent.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
        }

.form-check-input:checked {
    border-color: var(--accent-color1) !important;
    background-color: var(--accent-color1) !important;
}

.lightswitch {
    background: var(--bs-white);
    bottom: 20px;
    cursor: pointer;
    height: 32px;
    position: fixed;
    right: 20px;
    text-align: center;
    width: 32px;
    z-index: 996;
    opacity: 0.8;
}

.font-125rem {
    font-size: 1.25rem;
}

.ul-tags {
    text-align: justify !important;
}

.nav-link {
    color: var(--accent-color1);
}

